# YadroImpuls

./: CMakeLists.txt  README.md
include/: Event.h  EventHandler.h  Parser.h  Validator.h
src/: Event.cpp  EventHandler.cpp  Parser.cpp  Validator.cpp  main.cpp
tst/: CMakeLists.txt  main.cpp  testEvent.cpp  testEventHandler.cpp  testParser.cpp  testValidator.cpp
